syntax = "proto3";

package paymentpb;
option go_package = "pkg/proto/paymentpb";

message PayRequest {
  string order_id = 1;
  string customer_id = 2;
  double  amount = 3;
  string status = 4;
}

message Item {
  string product_id = 1;
  int32 quantity = 2;
  int64 price_cents = 3;
}

message PayResponse {
  string message = 1;
  string payment_id = 2;
  string status = 3;
}

service PaymentService {
  rpc Pay(PayRequest) returns (PayResponse);
}
